fix extra spacing and box shadow gaps

--- a/aemedge/blocks/carousel/carousel.css
+++ b/aemedge/blocks/carousel/carousel.css
@@ -116,8 +116,8 @@
   inset: 0; */
   min-width: 90%;
   width: 90%;
-  min-height: 90%;
-  height: 90%;
+  min-height: 100%;
+  height: 100%;
 }
 
 .carousel .carousel-slide .carousel-slide-image picture > img {
@@ -356,6 +356,7 @@
 
 .carousel.full .carousel-slide .carousel-slide-image picture > img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
   margin: 0;
   border-radius: 0;
